--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -59,7 +59,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 80px;
+    padding: 10px 30px;
     background: #e9e3e9;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     z-index: 999;
@@ -69,8 +69,7 @@ body {
 }
 
 .logo {
-
-    width: 120px;
+    width: 130px;
     height: 50px;
 }
 
@@ -78,6 +77,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 10px;
 }
 
 #navbar li {
@@ -503,11 +503,6 @@ footer .col {
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 20px;
-}
-
-footer .detail {
-    padding-left: 5%;
-    background-color: #2ba2e7;
 }
 
 footer .logo {
@@ -1128,8 +1123,8 @@ footer .copyright {
 
     #mobile i {
         color: #1a1a1a;
-        font-size: 24px;
-        padding: 20px;
+        font-size: 15px;
+        padding: 10px;
     }
 
     #close {
@@ -1201,14 +1196,19 @@ footer .copyright {
     }
 }
 
-@media (max-width:477) {
+@media (max-width:399) {
     .section-p1 {
         padding: 20px;
     }
 
     #header {
-        align-items: flex-end;
-        padding: 10px 30px;
+        padding: 5px 5px;
+
+    }
+
+    .logo {
+        width: 120px;
+        height: 50px;
     }
 
     h1 {
