--- a/Huddle/huddle.css
+++ b/Huddle/huddle.css
@@ -724,7 +724,7 @@ footer .copyright p {
     }
 
     #header {
-        height: 150vh;
+        height: 100vh;
     }
 
     .logobtn {
@@ -732,12 +732,13 @@ footer .copyright p {
         margin-top: 11%;
         font-weight: 600;
         font-size: 12px;
+        margin-left: 7%;
     }
 
     .logo img {
         width: 55%;
         padding-top: 2%;
-        margin-left: 0;
+        margin-left: 0%;
         margin-top: 18%;
     }
 
@@ -802,7 +803,7 @@ footer .copyright p {
     }
 
     #info .info-com {
-        margin-top: 3%;
+        margin-top: 10%;
         padding: 40px 0;
         display: flex;
         flex-direction: column;
@@ -814,8 +815,8 @@ footer .copyright p {
         /* background-color: aqua; */
         line-height: 15px;
         padding-top: 50px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
         order: 2;
     }
 
@@ -845,7 +846,7 @@ footer .copyright p {
 
     .hanger {
         width: 95%;
-        padding: 20px;
+        padding: 40px;
         border-radius: 10px;
         margin: 0 3%;
         margin-top: 35%;
@@ -854,7 +855,7 @@ footer .copyright p {
     }
 
     .hanger h2 {
-        font-size: 14px;
+        font-size: 16px;
         color: hsl(192, 100%, 9%);
     }
 
@@ -867,6 +868,7 @@ footer .copyright p {
         padding: 10px;
         text-align: center;
         border-radius: 90px;
+        box-shadow: 0px 3px 5px 2px rgba(109, 106, 106, 0.12);
     }
 
     footer {
@@ -881,7 +883,7 @@ footer .copyright p {
     }
 
     footer .beg {
-        padding-top: 15%;
+        padding-top: 20%;
         padding-bottom: 40px;
     }
 
